[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Pawns/Parts/Timers.gd" type="Script" id=1]

[node name="Timers" type="Node2D"]
script = ExtResource( 1 )

[node name="Knock_Back" type="Timer" parent="."]
one_shot = true

[node name="Shield_Hit" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Shield_Up" type="Timer" parent="."]
one_shot = true

[node name="NRG_Up" type="Timer" parent="."]
one_shot = true

[node name="Jump_Up" type="Timer" parent="."]
one_shot = true

[node name="Speed" type="Timer" parent="."]
one_shot = true

[node name="Jump" type="Timer" parent="."]
one_shot = true

[node name="Stun" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="Knock_Back" to="." method="_on_Knock_Back_timeout"]
[connection signal="timeout" from="Shield_Hit" to="." method="_on_Shield_Hit_timeout"]
[connection signal="timeout" from="Shield_Up" to="." method="_on_Shield_Up_timeout"]
[connection signal="timeout" from="NRG_Up" to="." method="_on_NRG_Up_timeout"]
[connection signal="timeout" from="Jump_Up" to="." method="_on_Jump_Up_timeout"]
[connection signal="timeout" from="Speed" to="." method="_on_Speed_timeout"]
[connection signal="timeout" from="Jump" to="." method="_on_Jump_timeout"]
[connection signal="timeout" from="Stun" to="." method="_on_Stun_timeout"]
